@startuml
class Usuario {
  -nome: String
  -id: int
  -senha: String
  +realizarLogin()
}

class Secretaria extends Usuario {
  +gerarCurriculo()
  +manterInformacoesDisciplina(Disciplina)
  +manterInformacoesProfessor(Professor)
  +manterInformacoesAluno(Aluno)
}

class Aluno extends Usuario {
  -matricula: Matricula
  -curso: String
  +matricularDisciplina(Disciplina) : void
  +cancelarMatricula(Disciplina) : void
}

class Professor extends Usuario {
  +verificarAlunos(Disciplina) : void
}

class Disciplina {
  -nome: String
  -codigo: String
  -creditos: int
  -cargaHoraria: int
  -limite: int
  -estaOfertada: boolean
}

class DisciplinasOfertadas {
  -disciplina: Disciplina
  -prazo: Date
  -status: boolean
  -Professor: professor
  +matricularAluno(Aluno) : boolean
  +cancelarMatricula(Aluno) : boolean
  +encerrarDisciplina : void
  -verificarLimte() : boolean
}

class Matricula {
  -data: Date
  -status: boolean
  -tipo: String
  -disciplinas: List<DisciplinaOfertada>
  +notificarCobrança() : void
  +matricularAlunoNaDisciplina(DisciplinasOfertadas) : boolean
  +desmatricularAluno(DisciplinasOfertadas) : boolean
}

Secretaria o--> Disciplina : "manter informações" <<Aggregation>>

Professor -- Disciplina : "verificar alunos" <<Association>>

DisciplinasOfertadas *-- Matricula : "gerenciar matriculas" <<Composition>>

DisciplinasOfertadas  -- Disciplina : "Ofertadas" <<Association>>

Matricula -- Aluno : "associar aluno" <<Association>>
@enduml
